--- a/mysite/response/templates/response/more_info.html
+++ b/mysite/response/templates/response/more_info.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body> first personal computer to be sold without a programming language.[60] Its debut was signified by "1984", a $1.5 million television advertisement directed by Ridley Scott that aired during the third quarter of Super Bowl XVIII on January 22, 1984.[61] This is now hailed as a watershed event for Apple's success[62] and was called a "masterpiece" by CNN[63] and one of the greatest TV advertisements of all time by TV Guide.[64][65]
-    <p>In 1984, Apple launched the Macintosh, the
+{% extends 'report/base.html' %}
+
+{% block title %}
+<title>More_info</title>
+{% endblock %}
+
+{% block content %}
+<p>
+    first personal computer to be sold without a programming language.[60] Its debut was signified by "1984", a $1.5 million television advertisement directed by Ridley Scott that aired during the third quarter of Super Bowl XVIII on January 22, 1984.[61] This is now hailed as a watershed event for Apple's success[62] and was called a "masterpiece" by CNN[63] and one of the greatest TV advertisements of all time by TV Guide.[64][65]
+    In 1984, Apple launched the Macintosh, the
 
         Macintosh sales were initially good, but began to taper off dramatically after the first three months due to its high price, slow speed, and limited range of available software.[66][67][68][69]:195 In early 1985, this sales slump triggered a power struggle between Steve Jobs and CEO John Sculley, who had been hired two years earlier by Jobs[70][71] using the famous line, "Do you want to sell sugar water for the rest of your life or come with me and change the world?"[72] Sculley decided to remove Jobs as the general manager of the Macintosh division, and gained unanimous support from the Apple board of directors.[73][70]
         
@@ -15,5 +15,7 @@
         
         The outlook on Macintosh improved with the introduction of the LaserWriter, the first reasonably priced PostScript laser printer, and PageMaker, an early desktop publishing application released in July 1985.[78] It has been suggested that the combination of Macintosh, LaserWriter, and PageMaker was responsible for the creation of the desktop publishing market.[79]
     </p>
-</body>
-</html>
+
+{% endblock %}
+
+
